fix: correctly invert colors of alerts in dark mode (#591)
* Don't change the color of the close button in the alert

* Invert color of the alerts in dark mdoe

--- a/static/dark.css
+++ b/static/dark.css
@@ -241,3 +241,27 @@ div[style="color: rgb(85, 85, 85); font-size: 0.9em;"] {
 [aria-sort="descending"] {
   background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='101' height='101' preserveAspectRatio='none' fill='white'%3E%3Cpath opacity='.4' d='m51 1 25 23 24 22H1l25-22z'/%3E%3Cpath opacity='.8' d='m51 101 25-23 24-22H1l25 22z'/%3E%3C/svg%3E") !important;
 }
+
+.alert-success {
+  color: hsl(135, 70%, 90%);
+  background-color: hsl(135, 60%, 30%);
+  border-color: hsl(135, 60%, 25%);
+}
+
+.alert-info {
+  color: hsl(190, 70%, 90%);
+  background-color: hsl(190, 60%, 30%);
+  border-color: hsl(190, 60%, 25%);
+}
+
+.alert-warning {
+  color: hsl(45, 70%, 90%);
+  background-color: hsl(45, 60%, 30%);
+  border-color: hsl(45, 60%, 25%);
+}
+
+.alert-danger {
+  color: hsl(355, 70%, 90%);
+  background-color: hsl(355, 60%, 30%);
+  border-color: hsl(355, 60%, 25%);
+}
